Version 2.02.63 -  
================================
  Allocate all segments memory from vg private mempool.
  Return newly allocated PV segment after segment split.
  Optimise PV segments search for the most last segment search case.
  Remove vg_validate call when parsing cached metadata.
  Use hash table of LVs to speed up parsing of text metadata with many LVs.
  Fix two messages, add a whitespace and parentheses
  When dmeventd is not forking because of -d flag, don't kill the parent process
  Fix 'make install' when $(builddir) is different from $(srcdir).
  Fix dso resource leak in error path of dmeventd.
  Use C locales and use_mlockall for dmeventd.
  Fix --alloc contiguous policy only to allocate one set of parallel areas.
  Do not allow {vg|lv}change --ignoremonitoring if on clustered VG.
  Improved dependency tracking for dmeventd and liblvm2cmd sources.
  Improved Makefile rules for distclean and cflow targets.
  Add ability to create mirrored logs for mirror LVs.
  Fix clvmd cluster propagation of dmeventd monitoring mode.
  Allow ALLOC_ANYWHERE to split contiguous areas.
  Use INTERNAL_ERROR for internal errors throughout tree.
  Add some assertions to allocation code.
  Introduce pv_area_used into allocation algorithm and add debug messages.
  Add activation/monitoring to lvm.conf.
  Add --monitor and --ignoremonitoring to lvcreate.
  Allow dynamic extension of array of areas selected as allocation candidates.
  Export and use only valid cookie value in test suite.
  Remove const modifier for struct volume_group* from process_each_lv_in_vg().
  Don't allow resizing of internal logical volumes.
  Fix libdevmapper-event pkgconfig version string to match libdevmapper.
  Avoid scanning all pvs in the system if operating on a device with mdas.
  Add configure --with-clvmd=singlenode to use clvmd w/o cluster infrastructure.
  Get stacktrace if testsuite test drops core and lvm was built with debugging.
  Disable long living process flag in lvm2app.